--- a/AlarmManagerDemo/app/src/main/res/values/strings.xml
+++ b/AlarmManagerDemo/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">AlarmManagerDemo</string>
     <string name="remind_me_in_10_sec">remind me in 10 sec</string>
     <string name="generate">GENERATE</string>
+    <string name="cancel">CANCEL</string>
 </resources>
