--- a/GalleryAppMvvm/app/src/main/res/values/strings.xml
+++ b/GalleryAppMvvm/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="signup_txt">First time here? SignUp</string>
     <string name="sign_in">Sign In</string>
     <string name="log_in_heading">Log In</string>
+    <string name="loading">Loading...</string>
 </resources>
