--- a/GalleryAppMvvm/app/src/main/res/values/strings.xml
+++ b/GalleryAppMvvm/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="sign_in">Sign In</string>
     <string name="log_in_heading">Log In</string>
     <string name="loading">Loading...</string>
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
 </resources>
