--- a/newsapp3/app/src/main/res/values/strings.xml
+++ b/newsapp3/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">newsapp3</string>
+    <string name="textview">TextView</string>
+    <string name="headlines_10_minutes_ago">Headlines - 10 minutes ago</string>
+    <string name="top_5_stories_at_the_moment">Top 5 stories at the moment</string>
+    <string name="aman_s_briefing">Aman\'s briefing</string>
+    <string name="with_no_trade_deal_signed_donald_trump_narendra_modi_jamboree_was_about_two_men_not_two_countries">With no trade deal signed, Donald Trump-Narendra Modi jamboree was about two men, not two countries</string>
+    <string name="headlines_5_hours_ago">Headlines 5 hours ago</string>
 </resources>
