--- a/GalleryAppMvvm/app/src/main/res/values/strings.xml
+++ b/GalleryAppMvvm/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="loading">Loading...</string>
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
+    <string name="select_photo">SELECT PHOTO</string>
+    <string name="profile">Profile</string>
+    <string name="timeline">Timeline</string>
+    <string name="categories">Categories</string>
+    <string name="logout">Logout</string>
 </resources>
