--- a/GalleryAppMvvm/app/src/main/res/values/strings.xml
+++ b/GalleryAppMvvm/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="signup_txt">First time here? SignUp</string>
     <string name="sign_in">Sign In</string>
     <string name="log_in_heading">Log In</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading…</string>
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
     <string name="select_photo">SELECT PHOTO</string>
@@ -13,4 +13,16 @@
     <string name="timeline">Timeline</string>
     <string name="categories">Categories</string>
     <string name="logout">Logout</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="already_have_an_account">Already have an Account ?</string>
+    <string name="register_yourself">Register \nYourself</string>
+    <string name="dummy_category">Dummy Category</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="add_category">Add Category</string>
+    <string name="enter_category_name">Enter Category Name</string>
+    <string name="desc">Image View</string>
+    <string name="dummyname">DummyName</string>
+    <string name="dummy_email">Dummy email</string>
 </resources>
