--- a/DataBinding/app/src/main/res/values/strings.xml
+++ b/DataBinding/app/src/main/res/values/strings.xml
@@ -10,16 +10,16 @@
 
     <string-array name="EmailList">
         <item>ashu46d@gmail.com</item>
-        <item>anupam69@hotmail.com</item>
+        <item>anupam@hotmail.com</item>
         <item>subarno@gmail.com</item>
-        <item>lakshya06@gmail.com</item>
+        <item>lakshya@gmail.com</item>
         <item>tanvi@gmail.com</item>
     </string-array>
 
     <string-array name="numbers">
-        <item>9659288290</item>
-        <item>9659288117</item>
-        <item>9659212134</item>
+        <item>9659288240</item>
+        <item>9659282416</item>
+        <item>96592342134</item>
         <item>9765431029</item>
         <item>8364960971</item>
     </string-array>
